# cyber-sop-assistant

./: .gitignore  BUILD_SUCCESS.md  CHECK.ps1  CODE_OF_CONDUCT.md  DEV_START_FRONTEND.bat  DEV_START_FRONTEND.sh  FAST_LLM_SETUP.md  HOST_SYSTEM.bat  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  POPULATE_DATA.bat  POPULATE_DATA.sh  QUICK_REFERENCE.md  README.md  REQUIREMENTS_COMPLIANCE.md  SECURITY.md  SETUP_GUIDE.md  START.bat  START.ps1  START_BACKEND.ps1  START_BACKEND_FAST.bat  START_BACKEND_SIMPLE.bat  SYSTEM_COMPLETE.md  TAMIL_NADU_IMPLEMENTATION.md  TEST_CHAT.ps1  TEST_SYSTEM.bat  TEST_SYSTEM.sh  USER_FLOW_STATUS.md  cyber_sop.db  data.json  start.bat  start.ps1  start.sh  test_output.txt
backend/: .env.example  INSTALL_DEPS.bat  QUICK_START_SCRAPER.md  README.md  SETUP_TN_STATIONS.bat  SETUP_TN_STATIONS.sh  TEST_AND_FIX.bat  cyber_sop.db  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_stations_data.py
backend/app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py  seed_data.py
backend/app/core/: config.py  crime_types.py  dependencies.py  (+6 more)
backend/scripts/: add_to_vectorstore.py  check_users.py  create_db.py  debug_auth.py  fast_populate_vectorstore.py  init_db.py  init_setup.py  populate_cybercrime_data.py  populate_data.py  query_chroma.py  reset_db_schema.py  scrape_and_index.py  scrape_tamil_nadu_stations.py  seed_data.py  setup_db.py  setup_tamil_nadu_complete.py  test_e2e.py  test_llm.py  test_openrouter.py  test_system.py  test_vectorstore_setup.py  universal_setup.py
(+263 files in other folders)
